# qswitch

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  cmake_uninstall.cmake.in  go.mod  install.sh  main.go  setup.sh
.github/workflows/: update-completions.yml
AUR/: PKGBUILD
cmd/: apply.go  autofix.go  current.go  expSetup.go  list.go  panel.go  reload.go  root.go  switchKeybinds.go
cmd/qswitch/: actions.go  config.go  main.go  state.go
completions/: _qswitch  qswitch.bash  qswitch.fish  qswitch.zsh
example/: README.md  config.json
example/keybinds/: caelestia.conf  dms.conf  noctalia.conf  unbinds.conf  xenon.conf
man/: qswitch.1
quickshell/: .qmlls.ini  QuickSwitchPanel.qml  shell.qml
utils/: actions.go  autofix.go  config.go  help.go  state.go
